--- a/BlazorApp3/Client/Pages/DepositCustomer.razor
+++ b/BlazorApp3/Client/Pages/DepositCustomer.razor
@@ -16,7 +16,7 @@ else
 @code {
     [Parameter]
     public string Code{ get; set; }
-    public string content;
+    protected string content;
     protected override async Task OnInitializedAsync()
     {
         if(Code == null)
