--- a/BlazorApp3/Client/Pages/FetchData.razor
+++ b/BlazorApp3/Client/Pages/FetchData.razor
@@ -37,7 +37,7 @@ else
 }
 
 @code {
-    private WeatherForecast[] forecasts;
+    protected WeatherForecast[] forecasts;
 
     protected override async Task OnInitializedAsync()
     {
