--- a/BlazorApp3/Client/Pages/ResetPassword.razor
+++ b/BlazorApp3/Client/Pages/ResetPassword.razor
@@ -14,10 +14,10 @@
 
 
 @code {
-    private ResetPasswordModel resetPasswordModel = new ResetPasswordModel();
+    protected ResetPasswordModel resetPasswordModel = new ResetPasswordModel();
 
-    public string content;
-    public async Task HandleValidSubmit()
+    protected string content;
+    protected async Task HandleValidSubmit()
     {
        var response =  await _httpClient.PostAsJsonAsync<ResetPasswordModel>("user/resetPassword", resetPasswordModel);
        content = await response.Content.ReadAsStringAsync();
