--- a/BlazorApp3/Client/Pages/BanAccount.razor
+++ b/BlazorApp3/Client/Pages/BanAccount.razor
@@ -32,8 +32,8 @@ else
 @code {
     [Parameter]
     public string Id{ get; set; }
-    public AccountManagementModel acc;
-    public string content;
+    protected AccountManagementModel acc;
+    protected string content;
     protected override async Task OnInitializedAsync()
     {
         if(Id == null)
@@ -41,12 +41,12 @@ else
 
        acc =  await _httpClient.GetFromJsonAsync<AccountManagementModel>($"Admin/EditAccount/{Id}");
     }
-    public async Task Ban()
+    protected async Task Ban()
     {
         var  response =  await _httpClient.PostAsJsonAsync<string>("Admin/Ban", acc.Id);
         content = await response.Content.ReadAsStringAsync();
     }
-    public async Task UnBan()
+    protected async Task UnBan()
     {
         var  response =  await _httpClient.PostAsJsonAsync<string>("Admin/UnBan", acc.Id);
         content = await response.Content.ReadAsStringAsync();
