--- a/BlazorApp3/Client/Pages/CreateStudio.razor
+++ b/BlazorApp3/Client/Pages/CreateStudio.razor
@@ -16,9 +16,9 @@
 </EditForm>
 <div>@content</div>
 @code {
-    public MovieModel movie = new();
-    public string content;
-    public async Task HandleValidSubmit()
+    protected MovieModel movie = new();
+    protected string content;
+    protected async Task HandleValidSubmit()
     {
         var response = await _httpClient.PostAsJsonAsync<MovieModel>("Studio/Upload",movie);
         content = await response.Content.ReadAsStringAsync();
