--- a/BlazorApp3/Client/Pages/EditMovieStudio.razor
+++ b/BlazorApp3/Client/Pages/EditMovieStudio.razor
@@ -47,10 +47,10 @@ else
 @code {
     [Parameter]
     public string Id{ get; set; }
-    public MovieModel movie;
-    private IBrowserFile movieFile;
-    private IBrowserFile imageFile;
-    public string content;
+    protected MovieModel movie;
+    protected IBrowserFile movieFile;
+    protected IBrowserFile imageFile;
+    protected string content;
      protected override async Task OnInitializedAsync()
     {
         
@@ -68,7 +68,7 @@ else
         var response =  await _httpClient.PostAsJsonAsync<MovieModel>("Studio/EditMovie", movie);
        content = await response.Content.ReadAsStringAsync();
     }
-    public async Task OnChooseMovieFile(InputFileChangeEventArgs e)
+    protected async Task OnChooseMovieFile(InputFileChangeEventArgs e)
     {
          List<string> list = new List<string>();
                 list.Add("video/x-msvideo");
@@ -107,7 +107,7 @@ else
         }
         
     }
-    public async Task OnChooseImageFile(InputFileChangeEventArgs e)
+    protected async Task OnChooseImageFile(InputFileChangeEventArgs e)
     { 
         List<string> list = new List<string>();
                 list.Add("image/bmp");
@@ -144,7 +144,7 @@ else
 
        
     }
-     public async Task Upload()
+     protected async Task Upload()
     {
        _navigationManager.NavigateTo($"/Studio/MovieUpload/{Id}",true);
     }
