--- a/BlazorApp3/Client/Pages/SignUp.razor
+++ b/BlazorApp3/Client/Pages/SignUp.razor
@@ -23,12 +23,12 @@
 <div>@content</div>
 @code {
 
-    public SignUpModel signUpModel = new() {DateOfBirth = DateTime.Now };
+    protected SignUpModel signUpModel = new() {DateOfBirth = DateTime.Now };
 
 
-    public string content;
+    protected string content;
 
-    public async Task HandleValidSubmit()
+    protected async Task HandleValidSubmit()
     {
 
         var response =  await _httpClient.PostAsJsonAsync<SignUpModel>("user/signUp", signUpModel);
