--- a/BlazorApp3/Client/Pages/Login.razor.css
+++ b/BlazorApp3/Client/Pages/Login.razor.css
@@ -71,7 +71,7 @@ span.psw {
 }
 
 /* Modal Content/Box */
-.modal-content {
+::deep .modal-content {
     background-color: #fefefe;
     margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
     border: 1px solid #888;
@@ -95,7 +95,7 @@ span.psw {
     }
 
 /* Add Zoom Animation */
-.animate {
+::deep .animate {
     -webkit-animation: animatezoom 0.6s;
     animation: animatezoom 0.6s
 }
