--- a/BlazorApp3/Client/Shared/NavMenu.razor
+++ b/BlazorApp3/Client/Shared/NavMenu.razor
@@ -70,6 +70,11 @@
                         <span class="oi oi-list-rich" aria-hidden="true"></span> Create Movie
                     </NavLink>
                     </div>
+                    <div class="nav-item px-3">
+                    <NavLink class="nav-link" href="SalaryStudio">
+                        <span class="oi oi-list-rich" aria-hidden="true"></span> Salary
+                    </NavLink>
+                    </div>
                     
             </Authorized>
         </AuthorizeView>
