--- a/BlazorApp3/Client/Pages/Login.razor
+++ b/BlazorApp3/Client/Pages/Login.razor
@@ -33,11 +33,11 @@
                 @*<InputText type="text" @bind-Value="@login.Email" placeholder="Enter Email" name="email" />*@
                  
 
-                <input type="text" @bind="@login.Email" />
+                <input type="text" @bind="@login.Email" placeholder="Enter Email" />
 
                 <label for="psw"><b>Password</b></label>
                 @*<InputText type="password" @bind-Value="@login.Password" placeholder="Enter Password" name="psw" />*@
-                <input type="password" @bind="@login.Password" />
+                <input type="password" @bind="@login.Password" placeholder="Enter Password" />
 
                 <button type="submit">Login</button>
 
@@ -50,7 +50,7 @@
                 <button type="button" @onclick="@(async () => await JS.InvokeVoidAsync("myFunction"))" class="cancelbtn">Cancel</button>
                 @*<NavLink class="nav-link" href="ResetPassword"> ResetPassword </NavLink>*@
                 @*<button type="button" class="cancelbtn" ><a href="ResetPassword" > Fogot Password</a> </button>*@
-                <span class="psw">Forgot <a href="#">password?</a></span>
+                <span class="psw">Forgot <a href="ResetPassword">password?</a></span>
             </div>
 
         </EditForm>
