Update Login Logout
Now  Login Logout don't need to hard refresh it make go though other page much faster

--- a/BlazorApp3/Client/Pages/Login.razor
+++ b/BlazorApp3/Client/Pages/Login.razor
@@ -1,7 +1,8 @@
 ﻿<h3>Login</h3>
 @inject IJSRuntime JS
-
+@inject IAccountService _accountService;
 @page "/login"
+@using BlazorApp3.Client.Services
 @*<EditForm Model="@login" OnValidSubmit="HandleValidSubmit">
     <DataAnnotationsValidator/>
     <ValidationSummary/>
