--- a/BlazorApp3/Client/Pages/Login.razor
+++ b/BlazorApp3/Client/Pages/Login.razor
@@ -1,5 +1,4 @@
-﻿<h3>Login</h3>
-@inject IJSRuntime JS
+﻿@inject IJSRuntime JS
 @inject IAccountService _accountService;
 @page "/login"
 @using BlazorApp3.Client.Services
@@ -15,11 +14,11 @@
 
 
 @*<button @onclick="@(async () => await JS.InvokeVoidAsync("myFunction2"))" style="width:auto;">Login</button>*@
-<button @onclick="@( () =>  DivCSS("display: block;"))" style="width:auto;">Login</button>
+<button @onclick="@( () =>  DivCSS("display: block;"))" style="width:auto; margin:0; position: absolute;top: 50%;left: 50%;" class=" zoom2">Login</button>
 
 <div id="id01" class="modal" style="@divCSS">
 
-    <div class="modal-content animate">
+    <div class="modal-content animate" style="border-radius: 12px;">
         <EditForm Model="@login" OnValidSubmit="HandleValidSubmit">
             <DataAnnotationsValidator />
             <ValidationSummary />
@@ -34,13 +33,14 @@
                 @*<InputText type="text" @bind-Value="@login.Email" placeholder="Enter Email" name="email" />*@
                  
 
-                <input type="text" @bind="@login.Email" placeholder="Enter Email" />
+                <input type="text" @bind="@login.Email" placeholder="Enter Email" class="zoom"/>
 
                 <label for="psw"><b>Password</b></label>
                 @*<InputText type="password" @bind-Value="@login.Password" placeholder="Enter Password" name="psw" />*@
-                <input type="password" @bind="@login.Password" placeholder="Enter Password" />
+                <input type="password" @bind="@login.Password" placeholder="Enter Password" class="zoom"/>
 
-                <button type="submit">Login</button>
+                <button type="submit" class="zoom">Login</button>
+
 
                 <label>
                     <input type="checkbox" checked="checked" name="remember"> Remember me
@@ -49,6 +49,7 @@
 
             <div class="container" style="background-color:#f1f1f1">
                 <button type="button" @onclick="@(async () => await JS.InvokeVoidAsync("myFunction"))" class="cancelbtn">Cancel</button>
+
                 @*<NavLink class="nav-link" href="ResetPassword"> ResetPassword </NavLink>*@
                 @*<button type="button" class="cancelbtn" ><a href="ResetPassword" > Fogot Password</a> </button>*@
                 <span class="psw">Forgot <a href="ResetPassword">password?</a></span>
