--- a/BlazorApp3/Client/App.razor
+++ b/BlazorApp3/Client/App.razor
@@ -1,6 +1,6 @@
-<Error>
+﻿<Error>
     <CascadingAuthenticationState>
-    <Router AppAssembly="@typeof(Program).Assembly">
+    <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(NavMenu)"/>
             <FocusOnNavigate RouteData="@routeData" Selector="h1"/>
