--- a/BlazorApp3/Client/_Imports.razor
+++ b/BlazorApp3/Client/_Imports.razor
@@ -17,3 +17,4 @@
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Authorization
 @inject ILogger<Error> Logger
+@using BlazorApp3.Client.Services
