Update Customer Click to load more comment

--- a/BlazorApp3/Client/Pages/WatchCustomer.razor
+++ b/BlazorApp3/Client/Pages/WatchCustomer.razor
@@ -34,10 +34,12 @@ else
     }
 }
 
+<button @onclick="LoadMore">Click to load more </button>
 
 <input type="text" @bind=@Acomment>
 
 <button @onclick="@Com" >Comment</button>
+
 
 <div>@content</div>
 
