Provide search, sort, click to load more for Studio and Customer

--- a/BlazorApp3/Client/Pages/MovieCustomer.razor
+++ b/BlazorApp3/Client/Pages/MovieCustomer.razor
@@ -4,7 +4,7 @@
 @attribute [Authorize(Roles ="Customer")]
 <input placeholder="Enter your text" @bind-value="@searchString" />
 
-    <button class="btn btn-primary" @onclick="OnInitializedAsync">Search</button>
+    <button class="btn btn-primary" @onclick="Search">Search</button>
 
 @if(movies == null)
 {
@@ -45,7 +45,7 @@ else
         }
         </tbody>
     </table>
-
+     <button @onclick="LoadMore">Click to load more</button>
     
 }
 
