--- a/BlazorApp3/Client/Pages/StatusStudio.razor
+++ b/BlazorApp3/Client/Pages/StatusStudio.razor
@@ -2,17 +2,35 @@
 @attribute [Authorize(Roles ="Studio")]
 @page "/StatusStudio/{Id}"
 
-@if(commentStatus.Count < 1)
+@*@if(commentStatus.Count < 1)
 {
     <div>loadding</div>
 }
 else
 {
+    <input type="datetime" @bind="start" />
+    <input type="datetime" @bind="end" />
+
+    <button @onclick="Submit">Submit</button>
+
+
+    @*<div>Positive: @commentStatus[0]</div>
+
+<div>Negative: @commentStatus[1]</div>
+
+
+}*@
+
+<input type="datetime" @bind="start" />
+    <input type="datetime" @bind="end" />
+
+    <button @onclick="Submit">Submit</button>
+    <div>@content</div>
+
+    @if(commentStatus.Count > 1)
+{
     <div>Positive: @commentStatus[0]</div>
 
 <div>Negative: @commentStatus[1]</div>
-<button @onclick="Submit">Make AI check again</button>
-<div>@content</div>
+<div>View: @view</div>
 }
-
-
