--- a/BlazorApp3/Client/Pages/ResetPassword.razor
+++ b/BlazorApp3/Client/Pages/ResetPassword.razor
@@ -1,16 +1,62 @@
-﻿<h3>ResetPassword</h3>
+﻿@*<h3>ResetPassword</h3>*@
 @page "/ResetPassword"
 
-<EditForm Model="@resetPasswordModel" OnValidSubmit="@HandleValidSubmit">
-    <DataAnnotationsValidator/>
-    <ValidationSummary/>
-    Email
-    <InputText  @bind-Value="@resetPasswordModel.Email"/>
-    
-    <button type="submit">Submit</button>
-</EditForm>
+@*<EditForm Model="@resetPasswordModel" OnValidSubmit="@HandleValidSubmit">
+	<DataAnnotationsValidator/>
+	<ValidationSummary/>
+	Email
+	<InputText  @bind-Value="@resetPasswordModel.Email"/>
+
+	<button type="submit">Submit</button>
+	</EditForm>*@
 
 <div>@content</div>
+
+
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+</head>
+<!------ Include the above in your HEAD tag ---------->
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<div class="form-gap"></div>
+<div class="container">
+	<div class="row">
+		<div class="col-md-4 col-md-offset-4">
+			<div class="panel panel-default">
+				<div class="out-panel-body">
+					<div class="text-center">
+						<h3><i class="fa fa-lock fa-4x"></i></h3>
+						<h2 class="text-center">Forgot Password?</h2>
+						<p>You can reset your password here.</p>
+						<div class="panel-body">
+
+							<EditForm Model="@resetPasswordModel" OnValidSubmit="@HandleValidSubmit">
+
+								<div class="input-box">
+									<div class="input-group">
+										<span class="input-group-addon"><i class="glyphicon glyphicon-envelope color-blue"></i></span>
+										<input placeholder="email address" class="form-control" @bind="@resetPasswordModel.Email" type="email">
+									</div>
+								</div>
+								<div class="input-boxes">
+									<input class="button-input" value="Reset Password" type="submit">
+								</div>
+
+								
+							</EditForm>
+
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
 
 
 
