Studio Status full update

--- a/BlazorApp3/Client/Pages/StatusStudio.razor
+++ b/BlazorApp3/Client/Pages/StatusStudio.razor
@@ -21,16 +21,24 @@ else
 
 }*@
 
-<input type="datetime" @bind="start" />
-    <input type="datetime" @bind="end" />
+<input type="date" @bind="start" />
+    <input type="date" @bind="end" />
 
     <button @onclick="Submit">Submit</button>
     <div>@content</div>
 
-    @if(commentStatus.Count > 1)
+@*    @if(commentStatus.Count > 1)
 {
     <div>Positive: @commentStatus[0]</div>
-
 <div>Negative: @commentStatus[1]</div>
-<div>View: @view</div>
+}*@
+
+@foreach(var status in fullStatus)
+{
+    <div>Date: @status["Date"]</div>
+    <div>Positive: @status["Positive"]</div>
+    <div>Negative: @status["Negative"]</div>
+    <div>View: @status["View"]</div>
+    <div>Buy: @status["Buy"]</div>
+    <div>Money: @status["Money"]</div>
 }
