Back up for many function is coming

--- a/BlazorApp3/Client/Pages/StatusStudio.razor
+++ b/BlazorApp3/Client/Pages/StatusStudio.razor
@@ -20,6 +20,8 @@ else
 
 
 }*@
+<input type="month" @bind="month" />
+<button @onclick="Salary">Salary</button>
 
 <input type="date" @bind="start" />
     <input type="date" @bind="end" />
