--- a/BlazorApp3/Client/Pages/WatchCustomer.razor
+++ b/BlazorApp3/Client/Pages/WatchCustomer.razor
@@ -19,7 +19,7 @@
 }
 else
 {
-    <video src="@movieLink"  width="1280" height="720" controls></video>
+    <video src="@movieLink"  width="1280" height="720" controls @onclick="View"></video>
 }
 @if (commentList != null)
 { 
