--- a/BlazorApp3/Client/_Imports.razor
+++ b/BlazorApp3/Client/_Imports.razor
@@ -18,3 +18,4 @@
 @using Microsoft.AspNetCore.Authorization
 @inject ILogger<Error> Logger
 @using BlazorApp3.Client.Services
+@inject IJSRuntime JS
