--- a/BlazorApp3/Client/Pages/SignUp.razor
+++ b/BlazorApp3/Client/Pages/SignUp.razor
@@ -28,7 +28,7 @@
 		</div>
 		<div class="forms">
 			<div class="form-content">
-				<div class="signup-form">
+				<div class="login-form">
 					<div class="title">Signup</div>
 					<form action="#">
 						<div class="input-boxes">
