Update salary by movie for studio and now can use <Title value="Page title" />

--- a/BlazorApp3/Client/Pages/StatusStudio.razor
+++ b/BlazorApp3/Client/Pages/StatusStudio.razor
@@ -20,9 +20,16 @@ else
 
 
 }*@
+<div>Request to salary</div>
 <input type="month" @bind="month" />
 <button @onclick="Salary">Salary</button>
 
+<div>Cash Check</div>
+<input type="month" @bind="check" />
+<button @onclick="Check">Check</button>
+
+
+<div>Dashboard</div>
 <input type="date" @bind="start" />
     <input type="date" @bind="end" />
 
