--- a/BlazorApp3/Client/_Imports.razor
+++ b/BlazorApp3/Client/_Imports.razor
@@ -19,3 +19,4 @@
 @inject ILogger<Error> Logger
 @using BlazorApp3.Client.Services
 @inject IJSRuntime JS
+@using Microsoft.AspNetCore.Components.Web.Extensions.Head
