Update dashboard for role admin
Update: Dashboard for role admin
+ Dashboard account manager
+ Dashboard movie manager
Add-new: UI Contact Us form

--- a/BlazorApp3/Client/Shared/NavMenu.razor
+++ b/BlazorApp3/Client/Shared/NavMenu.razor
@@ -38,11 +38,11 @@
                         <span class="tooltip">Home</span>
                     </li>
                     <li>
-                        <a href="counter">
+                        <a href="contact">
                             <i class='bx bx-heart'></i>
-                            <span class="links_name">Saved</span>
+                            <span class="links_name">Contact Us</span>
                         </a>
-                        <span class="tooltip">Saved</span>
+                        <span class="tooltip">Contact Us</span>
                     </li>
                     @*<li>
                         <a href="fetchdata">
