--- a/BlazorApp3/Client/Pages/DepositCustomer.razor
+++ b/BlazorApp3/Client/Pages/DepositCustomer.razor
@@ -1,7 +1,6 @@
 ﻿@using Braintree
 <h3>DepositCustomer</h3>
 @inject IJSRuntime JS
-@page "/Deposit/{Code}"
 @page "/Deposit"
 
 @*@if(content == null)
@@ -13,7 +12,7 @@ else
     <div>@content</div>
 
 }*@
-<div>@Code</div>
+<div>@content</div>
 <input type="number" step="0.01" min="0.01" @bind="cash"/>
 <button @onclick="Cash">Ok</button>
 
