--- a/BlazorApp3/Client/Pages/WatchCustomer.razor
+++ b/BlazorApp3/Client/Pages/WatchCustomer.razor
@@ -39,7 +39,7 @@ else
     {
         var local = commentList[i].Id;
         <div>Email: @commentList[i].Email, comment: @commentList[i].CommentText, Time: @commentList[i].Time</div>
-        <div>Like = @commentList[i].Like, Dislike = @commentList[i].DisLike  </div>
+        <div>Like = @commentList[i].Like, Dislike = @commentList[i].DisLike, Is: @commentList[i].Is  </div>
         
         <button @onclick="@(async () => await AcLike(local))" >Like</button>
         <button @onclick="@(async () => await AcDisLike(local))" >DisLike</button>
